--- a/src/components/Images.css
+++ b/src/components/Images.css
@@ -1,46 +1,45 @@
 .app-container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    background-size: cover;
+    min-height: 100vh;
+    background-image: radial-gradient(rgb(164, 228, 15),rgb(209, 115, 27));
 }
 
 .heading {
     font-family: 'Roboto';
     text-align: center;
-    font-size: 22px;
+    font-size: 50px;
+    color: rgb(255, 255, 255);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-weight: 500;
+    margin: 0;
 }
 
 
 .images-container {
     display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: flex-start;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
-@media screen and (min-width: 768px){
-    .images-container {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        text-align: center;
-    }
+.title {
+    font-family: "Roboto";
+    font-size: 12px;
+    color: white;
 }
 
+.image {
+    height: 80px;
+    width: 80px;
+}
 
 .image-container {
-    display: flex;
-    flex-direction: column;
     align-items: center;
     text-align: center;
     width: 90px;
     height: 160px;
     margin: 7px;
 }
-
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px){
     .image-container {
         display: flex;
         flex-direction: column;
@@ -49,49 +48,37 @@
         width: 160px;
         height: 240px;
     }
-}
 
-
-@media screen and (min-width: 1200px) {
-    .image-container {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        align-items: center;
-        text-align: center;
-        width: 300px;
-        height: 350px;
-    }
-}
-
-.image {
-    height: 80px;
-    width: 80px;
-}
-
-@media screen and (min-width: 768px) {
     .image {
         height: 150px;
         width: 150px;
     }
 }
 
+@media screen and (min-width: 768px){
 
-@media screen and (min-width: 1200px) {
-    .image {
-        height: 260px;
-        width: 260px;
+    .images-container {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        text-align: center;
+        justify-content: center;
     }
-}
 
+    .image-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 160px;
+        height: 240px;
+    }
 
-.title {
-    font-family: "Roboto";
-    font-size: 12px;
-}
+    .image {
+        height: 150px;
+        width: 150px;
+    }
 
-
-@media screen and (min-width: 768px) {
     .title {
         font-family: "Roboto";
         font-size: 16px;
@@ -100,8 +87,23 @@
 
 
 @media screen and (min-width: 1200px) {
+    .image-container {
+        text-align: center;
+        align-items: center;
+        text-align: center;
+        width: 300px;
+        height: 350px;
+    }
+
+    .image {
+        height: 260px;
+        width: 260px;
+        border-radius: 10px;
+    }
+
     .title {
         font-family: "Roboto";
-        font-size: 22px;
+        font-size: 20px;
     }
 }
+
